--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.1"
+            "dev-master": "1.0.x-dev"
         },
         "symfony": {
             "id": "01C793YY6N0PD6H32GTS1F8JQV",
